// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SFooter Snapshot > renders full config correctly 1`] = `
"<footer class="mt-20 py-10">
  <div>
    <!-- footer row 1 -->
    <nav aria-label="Footer Main Navigation" class="mb-4 grid grid-cols-1 gap-8 md:grid-cols-3 lg:grid-cols-5">
      <!-- Main footer columns -->
      <div><span class="text-md font-extrabold uppercase">Products</span><!-- Footer column links -->
        <ul class="space-y-2 pt-4" aria-label="Products menu">
          <li><a href="/product-1" class="text-s">Product 1</a></li>
          <li><a href="/product-2" class="text-s">Product 2</a></li>
        </ul>
      </div>
      <div><span class="text-md font-extrabold uppercase">Support</span><!-- Footer column links -->
        <ul class="space-y-2 pt-4" aria-label="Support menu">
          <li><a href="/support" class="text-s">Help Center</a></li>
        </ul>
      </div>
    </nav><!-- footer row 2 -->
    <div class="pt-8">
      <!-- Logo -->
      <div class="mb-8 flex items-center justify-between">
        <div class="flex items-center space-x-2"><span class="text-2xl font-bold">My Company</span></div>
      </div>
      <div class="mb-8 items-center justify-between sm:flex md:flex-row">
        <div class="hide-scrollbar flex flex-col items-center justify-between sm:overflow-x-auto md:flex-row">
          <!-- Social Links -->
          <nav aria-label="Social Media Links" class="mb-4 flex md:mb-0"><a href="https://twitter.com" rel="noopener noreferrer" target="_blank" aria-label="Twitter" class="mr-6"><span class="iconify i-twitter-icon size-5 text-black dark:text-white" aria-hidden="true"></span><span class="sr-only">Visit our Twitter page</span></a><a href="https://facebook.com" rel="noopener noreferrer" target="_blank" aria-label="Facebook" class="mr-6"><span class="iconify i-facebook-icon size-5 text-black dark:text-white" aria-hidden="true"></span><span class="sr-only">Visit our Facebook page</span></a></nav>
        </div>
        <div class="flex flex-col justify-between sm:items-center md:flex-row">
          <!-- Brand links -->
          <nav aria-label="Brand Navigation" class="flex flex-col flex-wrap justify-center gap-4 text-sm sm:flex-row md:justify-end"><a href="/blog" rel="noopener noreferrer" target="_blank">Blog</a><a href="/careers" rel="noopener noreferrer" target="_blank">Careers</a></nav>
        </div>
      </div><!-- footer row 3 -->
      <!-- Legal links -->
      <nav aria-label="Legal Navigation" class="flex flex-col justify-between text-sm sm:items-center md:flex-row">
        <div class="mb-2 font-semibold md:mb-0">© 2023 My Company</div>
        <div class="flex flex-col flex-wrap justify-center gap-4 sm:flex-row md:justify-end"><a href="/privacy">Privacy Policy</a><a href="/terms">Terms of Service</a></div>
      </nav><!-- Address -->
      <address class="mt-4 text-sm font-normal">1234 Nuxt Street, Vue City</address>
    </div>
  </div>
</footer>"
`;

exports[`SFooter Snapshot > renders minimal config with empty arrays correctly 1`] = `
"<footer class="mt-20 py-10">
  <div>
    <!-- footer row 1 -->
    <nav aria-label="Footer Main Navigation" class="mb-4 grid grid-cols-1 gap-8 md:grid-cols-3 lg:grid-cols-5">
      <!-- Main footer columns -->
    </nav><!-- footer row 2 -->
    <div class="pt-8">
      <!-- Logo -->
      <div class="mb-8 flex items-center justify-between">
        <div class="flex items-center space-x-2"><span class="text-2xl font-bold">Minimal Inc.</span></div>
      </div>
      <div class="mb-8 items-center justify-between sm:flex md:flex-row">
        <div class="hide-scrollbar flex flex-col items-center justify-between sm:overflow-x-auto md:flex-row">
          <!-- Social Links -->
          <nav aria-label="Social Media Links" class="mb-4 flex md:mb-0"></nav>
        </div>
        <div class="flex flex-col justify-between sm:items-center md:flex-row">
          <!-- Brand links -->
          <nav aria-label="Brand Navigation" class="flex flex-col flex-wrap justify-center gap-4 text-sm sm:flex-row md:justify-end"></nav>
        </div>
      </div><!-- footer row 3 -->
      <!-- Legal links -->
      <nav aria-label="Legal Navigation" class="flex flex-col justify-between text-sm sm:items-center md:flex-row">
        <div class="mb-2 font-semibold md:mb-0"></div>
        <div class="flex flex-col flex-wrap justify-center gap-4 sm:flex-row md:justify-end"></div>
      </nav><!-- Address -->
      <address class="mt-4 text-sm font-normal"></address>
    </div>
  </div>
</footer>"
`;
